# graphzero

./: .gitignore  AGENTS.md  CODEBASE_IMPROVEMENTS.md  Cargo.toml
.github/workflows/: mirror-bowenv2.yml
configs/: first-curve.toml  train-whittle.toml  whittle-1024-constlr.toml  whittle-1024-policy.toml  whittle-1024-pub32-5k-noema-gated-sage-tanh-fresh-ovl.toml  whittle-1024-pub32-5k-noema-gated-sage-tanh-nbt.toml  whittle-1024-pub32-5k-noema-gated-sage.toml  whittle-1024-pub32-5k-pointer-pair-gated.toml  whittle-20k-mirror.toml  whittle-20k-mirror2.toml  whittle-20k-stack.toml  whittle-5k-stack-audit2.toml  whittle-5k-stack-match-logit.toml  whittle-5k-stack-match.toml  whittle-5k-stack-nostop.toml  whittle-5k-stack-reuse2.toml  whittle-full-1024.toml  whittle-generated-exphormer-v2-symmetric-selfplay.toml
crates/gz-cli/: Cargo.toml
crates/gz-cli/examples/: export_root.rs
crates/gz-cli/src/: lib.rs  main.rs  remote_measure.rs  selfplay.rs  serve.rs
crates/gz-cli/tests/: selfplay.rs  serve.rs
crates/gz-engine-whittle/: Cargo.toml
crates/gz-engine-whittle/examples/: gumbel_random.rs
crates/gz-engine-whittle/src/: engine.rs  features.rs  graph.rs  lib.rs  rules.rs
crates/gz-engine-whittle/tests/: features.rs  release.rs
crates/gz-engine/src/: traits.rs
crates/gz-eval-service/examples/: eval_load.rs
crates/gz-eval-service/src/: backend.rs  lib.rs  process.rs
crates/gz-eval-service/tests/common/: mod.rs
crates/gz-eval/src/: types.rs
crates/gz-features/: Cargo.toml
crates/gz-features/examples/: gen_python_fixtures.rs
crates/gz-features/src/: codec.rs  collator.rs  error.rs  lib.rs  row.rs  schema.rs
crates/gz-features/tests/: row_and_batch.rs  schema.rs
crates/gz-measure-agent/: Cargo.toml
crates/gz-measure-agent/src/: lib.rs  main.rs
crates/gz-measure-agent/tests/: network.rs
crates/gz-measure-service/: Cargo.toml  build.rs
crates/gz-measure-service/proto/: measure.proto
crates/gz-measure-service/src/: agent.rs  coordinator.rs  error.rs  ids.rs  lib.rs  protocol.rs  receipt.rs  transport.rs
crates/gz-measure-service/tests/: coordinator.rs  recovery.rs
crates/gz-orchestrator/: Cargo.toml
crates/gz-orchestrator/examples/: serial_gumbel_bench.rs
crates/gz-orchestrator/src/: batch.rs  lanes.rs  lib.rs  measurement.rs  pool.rs  project.rs  reference.rs  root.rs  serial.rs  service.rs
crates/gz-orchestrator/src/lanes/: batcher.rs  lane.rs  mod.rs
crates/gz-orchestrator/tests/: batch.rs  featurized.rs  featurized_process.rs  project.rs  reference.rs  release.rs  replay_integration.rs  serial.rs  threaded.rs  whittle.rs
crates/gz-replay/: Cargo.toml
crates/gz-replay/src/: keys.rs  lib.rs  records.rs  store.rs
crates/gz-replay/tests/: store.rs
crates/gz-replay/tests/common/: mod.rs
crates/gz-search/src/: gumbel.rs  hash.rs
crates/gz-search/src/gumbel/: mod.rs  schedule.rs  tree.rs  types.rs
crates/gz-search/src/gumbel/task/: episode.rs  root.rs  run.rs
crates/gz-search/tests/: gumbel.rs  gumbel_goldens.rs  gumbel_task.rs
python/benches/: codec_bench.py
python/gz/codec/: batch.py  schema.py
python/gz/evaluator/: backends.py  server.py
python/gz/model/: exphormer.py
python/gz/proto/: frames.py
python/gz/trainer/: config.py  data.py  driver.py  loop.py  processes.py  publish.py  sampler.py  telemetry.py
python/tests/: test_codec.py  test_fixtures.py  test_model_torch.py  test_sampler.py  test_stub.py  test_trainer_driver.py  test_trainer_loop.py
python/tests/fixtures/: batch_attr0.gzfb  batch_attr1.gzfb  batch_expander.gzfb  targets.gzft
specs/: CODEBASE_OUTLINE.md  GZ_ENGINE.md  GZ_ENGINE_RELEASE_IMPL.md  GZ_ENGINE_WHITTLE.md  GZ_EVAL_SERVICE.md  GZ_FEATURES.md  GZ_GUMBEL_SPLIT_IMPL.md  GZ_LANES_DEEPEN_IMPL.md  GZ_MEASURER_IMPL.md  GZ_OPPONENT_IMPL.md  GZ_ORCHESTRATOR.md  GZ_ORCHESTRATOR_MULTI_WORKER_IMPL.md  GZ_REPLAY.md  GZ_SEARCH_RELEASE_IMPL.md  GZ_SEARCH_TREE_REUSE_IMPL.md  GZ_TRAINER.md  GZ_TRAINER_IMPL.md  GZ_TRAINING_DATA_IMPL.md  GZ_VALUE_OPPONENT_IMPL.md  distributed-measurement-protocol.md
