[workspace]
members = [
    "crates/gz-engine",
    "crates/gz-engine-whittle",
    "crates/gz-features",
    "crates/gz-eval-service",
    "crates/gz-measure-service",
    "crates/gz-measure-agent",
    "crates/gz-search",
    "crates/gz-eval",
    "crates/gz-measurer",
    "crates/gz-orchestrator",
    "crates/gz-replay",
    "crates/gz-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
