[package]
name = "gz-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "graphzero"
path = "src/main.rs"

[dependencies]
gz-engine = { path = "../gz-engine" }
gz-engine-whittle = { path = "../gz-engine-whittle" }
gz-eval = { path = "../gz-eval" }
gz-eval-service = { path = "../gz-eval-service" }
gz-features = { path = "../gz-features" }
gz-measurer = { path = "../gz-measurer" }
gz-measure-agent = { path = "../gz-measure-agent" }
gz-measure-service = { path = "../gz-measure-service" }
gz-orchestrator = { path = "../gz-orchestrator" }
gz-replay = { path = "../gz-replay" }
gz-search = { path = "../gz-search" }
pem = "3.0.6"
tikv-jemallocator = "0.7.0"
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
rcgen = "0.14.8"
