[package]
name = "gz-engine-whittle"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = "1.8.5"
gz-engine = { path = "../gz-engine" }
gz-features = { path = "../gz-features" }
rand = "0.10.1"
rand_chacha = "0.10.0"

[dev-dependencies]
gz-eval = { path = "../gz-eval" }
gz-search = { path = "../gz-search" }
