[package]
name = "gz-measure-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gz-measure-agent"
path = "src/main.rs"

[[bin]]
name = "gz-measure-smoke"
path = "src/bin/gz-measure-smoke.rs"

[dependencies]
blake3 = "1.8.5"
gz-engine = { path = "../gz-engine" }
gz-engine-whittle = { path = "../gz-engine-whittle" }
gz-measure-service = { path = "../gz-measure-service" }
pem = "3.0.6"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

[dev-dependencies]
rcgen = "0.14.8"
tempfile = "3.27.0"
