[package]
name = "gz-measure-service"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = "1.8.5"
gz-engine = { path = "../gz-engine" }
prost = "0.14.4"
rand = "0.10.1"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = { version = "0.14.6", features = ["tls-ring"] }
tonic-prost = "0.14.6"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.6"

[dev-dependencies]
gz-engine-whittle = { path = "../gz-engine-whittle" }
rcgen = "0.14.8"
tempfile = "3.23.0"
